# multicloud-fastapi-kms

./: .gcloudignore  .gitignore  README.md  main.py  requirements.txt
api/api_v1/: api.py
api/api_v1/endpoints/: keys.py
api/api_v2/: api.py
api/api_v2/endpoints/: users.py
backend/: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sql_app.db
backend/api/: deps.py
backend/api/api_v1/: api.py
backend/api/api_v1/endpoints/: keys.py  login.py  users.py
backend/db/: base_class.py  crud.py  crud_user.py  database.py  models.py
backend/schemas/: __init__.py  key.py  user.py
