[tool.poetry]
name = "multicloud-fastapi-kms"
version = "0.1.0"
description = ""
authors = ["Doanh Luong <kimdoanh89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
pylint = "^2.6.0"
uvicorn = "^0.13.0"
gunicorn = "^20.0.4"
pytest = "^6.2.1"
SQLAlchemy = "^1.3.22"
pydantic = {extras = ["email"], version = "^1.7.3"}
cryptography = "^3.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.0.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
